--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Blackjack</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Blackjack</h1>
         <p id="message-el">Want to play a round?</p>
-        <p>Cards:</p>
-        <p>Sum:</p>
+        <p id="cards-el">Cards:</p>
+        <p id="sum-el">Sum:</p>
 
         <button onclick="startGame()">START GAME</button>
         <script src="script.js"></script>
